--- a/WhatsGoingNearby/Localize/Localizable.xcstrings
+++ b/WhatsGoingNearby/Localize/Localizable.xcstrings
@@ -1105,7 +1105,7 @@
       }
     },
     "Publication" : {
-      "comment" : "noun\nNoun",
+      "comment" : "Noun\nnoun",
       "localizations" : {
         "en" : {
           "stringUnit" : {
